fixed weird spacing in about page's form box removed interaction feedback on images within albums

--- a/css/main.css
+++ b/css/main.css
@@ -443,6 +443,7 @@ input{
   margin: -0.25em;
 }
 
+
 .album-text{
   left: 0;
   position:absolute;
@@ -466,6 +467,16 @@ input{
 .album-image:hover:before {
     opacity:0;
 }
+
+
+/* photos inside an album, will not be responsove*/
+.album-content {
+  position:relative;
+  text-align:center;
+  float: left;
+  margin: -0.25em;
+}
+
 
 
 .price {
@@ -824,19 +835,25 @@ input{
   text-align: left;
 }
 
-.about-content h1, .about-content h2, .about-content h3, .about-content textarea{
+.about-content h1, .about-content textarea{
   display: inline-block;
   margin-left: 10%;
   margin-top: 5%; 
   z-index: 30;
   text-align: left;
   font-family: "Apercu", Verdana, sans-serif;
-  font-size: 1.5rem;
   width: 100%;
   padding-top: 1em;
   color: #A8A7A7;
 }
 
+.about-content h1 {
+  font-size: 1.5em;
+}
+
+.about-content textarea{
+  height: 8em;
+}
 ul.img-list {
     display: inline-block;
     list-style-type: none;
